k8s-manifests/overlays/dev/superapp/client/file/patch/dev-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-server
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: file-server
        image: harbor.cbe.com.et/cbe-superapp/file-server-dev:latest
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-server
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: pdf-server
        image: harbor.cbe.com.et/cbe-superapp/pdf-server-dev:latest
        imagePullPolicy: Always
